# grib-check

./: .gitignore  Assert.py  CheckEngine.py  FileScanner.py  Grib.py  GribCheck.py  IndexedLookupTable.py  KeyValue.py  LookupTable.py  Message.py  README.md  Report.py  TermColor.py  Test.py  TiggeChecker.py  TiggeParameters.json  WmoChecker.py  WmoParameters.json  checkdocs.md  devdoc.md  grib_check.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  shared.py  tigge_check.py  tigge_check_parameters.py  tigge_name.py
.github/: ci-config.yml
.github/workflows/: check-and-publish.yml  ci.yml
checker/: CheckPool.py  Crra.py  DestinE.py  DestineParameters.jsonnet  Destiny.py  Lam.py  S2S.py  S2SRefcst.py  Tigge.py  TiggeBasicChecks.py  TiggeChecker.py  TiggeParameters.json  TiggeParameters.jsonnet  Uerra.py  Wmo.py  WmoChecker.py  WmoParameters.json  WmoParameters.jsonnet  Wpmip.py  WpmipParameters.json  WpmipParameters.jsonnet
docs/: checkdocs.md  checks.md  components.md  conventions.md  devdoc.md  params.md
src/grib_check/: Assert.py  CheckEngine.py  FileScanner.py  Grib.py  GribCheck.py  KeyValue.py  LookupTable.py  Message.py  Report.py  TermColor.py  Test.py  TiggeName.py  ValueFormat.py  grib_check.py
src/grib_check/checker/: Crra.py  CrraParameters.jsonnet  DestinE.py  DestineParameters.jsonnet  GeneralChecks.py  Lam.py  Parameter.libsonnet  S2S.py  S2SRefcst.py  Tigge.py  TiggeParameters.jsonnet  Uerra.py  (+4 more)
tests/: test_Assert.py  test_Crra.py  test_GribCheck.py  test_IndexedLookupTable.py  test_KeyValue.py  test_LookupTable.py  test_Message.py  test_Report.py  test_Test.py  test_Tigge.py  test_TiggeChecker.py  test_Wmo.py  test_WmoChecker.py  test_Wpmip.py  test_parameters.json  tst_Tigge.py
tests/dgov-data/: od_eefo_taes_sfc_2024_0001_reduced_gg.grib2
tests/wmo/: od_eefo_fcmean_sfc_2024_0001_reduced_gg.grib2
tests/wpmip/: wpmip_cwao_sfc_tp.grib  wpmip_ecmf_sfc_ssr.grib
tigge/: Uerra.py
